# ministrace

./: README.md
ministrace-c/: .gitignore  main.c  main.h
ministrace-rs/: Cargo.toml
ministrace-rs/src/: main.rs
