[package]
name = "ministrace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = {version = "4.1.6", features = ["derive"]}
libc = "0.2.139"
"nix" = {version = "0.26.0", features = ["ptrace", "process"]}
